Update library to reflect styleguide
- Major upgrade and rewrite of all scripts
- Update all scripts to use function, local variables and call function
  within
- Update all scripts that require a usage guide to set as local variable
- Update all scripts with dependency check
- Update all scripts with help and invalid option test flags
- Delete all scripts that are OS X dependent and Git dependent, as
  they'll be moved to a separate repository
- Create man pages for any necessary script
- Create more functions, `fs`, `get-cert-names`, `json`, `rgb-to-xterm`,
  `targz`, `update-ctags`.

Issue: #6

--- a/bin/makefile
+++ b/bin/makefile
@@ -10,11 +10,33 @@
 # Configuration:
 #   @param    file    required
 #
-# Usage: 
+# Usage:
 #   `create-makefile conf/settings.json`
 
-if [[ -f "$2" ]]; then
+_create-makefile() {
+	local usage="$(basename $0): usage: $(basename $0) [-h|--help] $(tput smul)pattern$(tput rmul)"
+	local opt
 
+	# Test for known flags
+	for opt in $@
+	do
+		case $opt in
+			-h|--help)
+				printf "%s\n" "${usage}"
+				exit
+				;;
+			# test for an invalid flag, exit if not a valid flag
+			-*|--*)
+				printf "%s: usage: %s: invalid option\n%s\n" "$(basename "$0")" "$opt" "${usage}"
+				exit 1
+				;;
+		esac
+	done
+
+	if ! test -f "$1" &>/dev/null; then
+		printf "bash: %s: No file specified\n" "$(basename "$0")"
+		exit 1
+	else
 cat <<EOF>> Makefile
 .PHONY: _pwd_prompt decrypt_conf encrypt_conf
 
@@ -31,9 +53,7 @@ decrypt_conf: _pwd_prompt
 encrypt_conf: _pwd_prompt
 	openssl cast5-cbc -e -in $1 -out $1.cast5
 EOF
+	fi
+}
 
-	printf "%s✓ Success:%s Makefile has been created.\n" "$(tput setaf 2)" "$(tput sgr0)"
-else
-	printf "%s⊘ Error:%s You didn't pass in a file. Aborting!\n" "$(tput setaf 1)" "$(tput sgr0)"
-	exit 1
-fi
+_create-makefile "$@"
